fix runnersubmit formatting on mobile

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ button {
     font-size: 1.2rem;
     border-radius: 5px;
     margin-left: 10px;
+    overflow-wrap: normal;
 }
 
 #resultText{
@@ -218,4 +219,19 @@ button {
     opacity: 1;
     visibility: visible;
     transform: translateY(0);
+}
+
+
+box {
+  animation: show 600ms 100ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+  opacity: 0;
+  transform: rotateX(-90deg);
+  transform-origin: top center;
+}
+
+@keyframes show {
+  100% {
+    opacity: 1;
+    transform: none;
+  }
 }
